--- a/my-portfolio/src/app/globals.css
+++ b/my-portfolio/src/app/globals.css
@@ -34,8 +34,23 @@ body {
   src: url('/fonts/SparkyStonesRegular-BW6ld.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
+  
+}
+@font-face {
+  font-family: 'CustomFont2';
+  src: url('/fonts/Teko-VariableFont_wght.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
+.font-custom2 {
+  font-family: 'CustomFont2', sans-serif;
 }
 
 html {
   scroll-behavior: smooth;
+}
+
+p {
+  margin: 0 auto; /* Center the paragraph */
+  max-width: 700px; /* Adjust the maximum width as needed */
 }
