--- a/my-portfolio/src/app/globals.css
+++ b/my-portfolio/src/app/globals.css
@@ -42,8 +42,17 @@ body {
   font-weight: normal;
   font-style: normal;
 }
+@font-face {
+  font-family: 'CustomFont3';
+  src: url('/fonts/good_times.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
 .font-custom2 {
   font-family: 'CustomFont2', sans-serif;
+}
+.font-cusom3 {
+  font-family: 'CustomFont3' sans-serif;
 }
 
 p {
